@@ -30,7 +30,6 @@ setup(name='plone.dexterity',
       install_requires=[
           # 'Acquisition',
           # 'AccessControl',
-      
           'plone.alterego',
           'plone.autoform>=1.0b2',
           'plone.behavior>=1.0b5',
@@ -45,7 +44,6 @@ setup(name='plone.dexterity',
           'Products.CMFDefault',
           'Products.CMFDynamicViewFTI',
           'Products.statusmessages',
-          'rwproperty',
           'setuptools',
           'Zope2',
           'zope.annotation',
